Fixed overflow display

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-x-hidden dark:bg-[#121212];
+    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-hidden dark:bg-[#121212];
   }
 }
 
